--- a/wildkitten.html
+++ b/wildkitten.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <div class="sidenav">
+        <a href="#">Skip Navigation</a>
+        <ul>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Clients</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+      
     <header>
 
         <h1>MAIN CONTENT</h1>
