--- a/wildkitten2.html
+++ b/wildkitten2.html
@@ -6,7 +6,7 @@
     <title>A Kittens Journey</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
     
     
 </head>
